--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,4 +1,24 @@
-<header class="header">
-  
+<header class="header container">
+  <img src="../img/diveSeaLogo.png" alt="DiveSea Logo" class="logo">
+  <ul class="header__list">
+    <li class="header__list-item"><a href="" class="header__list-item--link">Discover</a></li>
+    <li class="header__list-item"><a href="" class="header__list-item--link">Сreators</a></li>
+    <li class="header__list-item"><a href="" class="header__list-item--link">Sell</a></li>
+    <li class="header__list-item"><a href="" class="header__list-item--link">stats</a></li>
+  </ul>
+  <div class="header__search">
+    <form action="search" method="get">
+      <div class="header__search-wrapper">
+        <button class="header__search-wrapper--btn" type="submit">
+          <svg width="23.305664" height="23.305420" viewBox="0 0 23.3057 23.3054" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <path id="stroke" d="M9.26 17.62C4.64 17.62 0.89 13.88 0.89 9.26C0.89 4.64 4.64 0.89 9.26 0.89C13.88 0.89 17.62 4.64 17.62 9.26C17.62 13.88 13.88 17.62 9.26 17.62Z" stroke="#9D9D9D" stroke-opacity="1.000000" stroke-width="1.792456" stroke-linejoin="round"/>
+          <path id="stroke" d="M15.23 15.23L22.4 22.4" stroke="#9D9D9D" stroke-opacity="1.000000" stroke-width="1.792456" stroke-linejoin="round" stroke-linecap="round"/>
+          </svg>
+        </button>
+        <input class="header__search-wrapper--input" type="text" placeholder="Search Art Work / Creator" name="q">
+      </div>
+    </form>
+  </div>
+  <a class="header__conectWallet-btn" href="">Connect Wallet</a>
 </header>
 
