--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -19,20 +19,107 @@
 @import "_blocks/footer";
 @import "_blocks/header";
 
-/*
-  Ниже пример подключения других блоков
 
-  Каждый новый файл должен отвечать за конкретный блок в терминах БЭМ
-  (https://ru.bem.info/methodology/key-concepts/#%D0%B1%D0%BB%D0%BE%D0%BA)
+.banner {
+  padding-top: 111px;
+  width: 1350px;
+  margin: 0 auto;
+  display: flex;
 
-  Для именования селекторов давайте придерживаться стиля two dashes
-  (https://ru.bem.info/methodology/naming-convention/#%D1%81%D1%82%D0%B8%D0%BB%D1%8C-two-dashes)
-  block-name__element-name--modificator
-*/
-
-/*
-  Код ниже нужно удалить, он добавлен просто для примера
-  Не стал выносить в отдельный файл, но если бы блок coming-soon действительно был бы нужен,
-  то он должен был бы быть в файле _blocks/coming-soon.scss
-*/
+  &__about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 568px;
+    height: 515px;
+    &-line {
+      width: 195px;
+      height: 1;
+      border: 1px solid rgb(32, 31, 31);
+      opacity: 0.2;
+    }
+    &-title {
+      width: 567px;
+      height: 180px;
+      color: rgb(20, 20, 22);
+      font-size: 75px;
+      font-weight: 600;
+      text-transform: capitalize;
+    }
+    &-text {
+      color: #676767;
+      width: 499px;
+      height: 56px;
+      font-size: 18px;
+      font-weight: 600;
+      text-align: justify;
+      &--span {
+        color: #000000;
+      }
+    }
+    &-list {
+      display: flex;
+      column-gap: 18px;
+      margin-left: -40px;
+      &--item {
+        &-link_explore{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 179px;
+          height: 60px;
+          border-radius: 12.41px;
+          background: #000000;
+          color: #ffffff;
+          background-color: #000000;
+          text-transform: uppercase;
+        }
+        &-link_create{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 138px;
+          height: 60px;
+          background: #000000;
+          color: #000000;
+          background-color: #ffffff;
+          box-sizing: border-box;
+          border: 1.5px solid #000000;
+          text-transform: uppercase;
+          border-radius: 12.41px;
+        }
+      }
+      &--our {
+        display: flex;
+        width: 452.96px;
+        height: 70.92px;
+        column-gap: 65px;
+        margin-left: -40px;
+        &-item {
+          width: 118px;
+          height: 70.92px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          // align-items: center;
+          // justify-content: center;
+          &-amount {
+            color: #000000;
+            font-size: 36.77px;
+            font-weight: 600;
+            text-align: center;
+          }
+          &-creatures {
+            width: 59px;
+            height: 19px;
+            color: #848586;
+            font-size: 12.26px;
+            font-weight: 500;
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+}
 
