--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -19,6 +19,6 @@
       </div>
     </form>
   </div>
-  <a class="header__conectWallet-btn" href="">Connect Wallet</a>
+  <a class="header__conectWallet-btn" href="conectWallet.html">Connect Wallet</a>
 </header>
 
