--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,6 +18,8 @@
 @import "_blocks/container";
 @import "_blocks/footer";
 @import "_blocks/header";
+@import "conectWallet";
+
 
 
 .banner {
@@ -25,7 +27,8 @@
   width: 1350px;
   margin: 0 auto;
   display: flex;
-  margin-right: 40px;
+  // margin-right: 40px;
+
 
   &__about {
     display: flex;
