--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -26,6 +26,7 @@
   padding-top: 111px;
   width: 1350px;
   margin: 0 auto;
+  transform: translateX(50px); /* Сдвиг вправо на 40px */
   display: flex;
   // margin-right: 40px;
 
@@ -126,4 +127,201 @@
     }
   }
 }
+
+
+.banner__slider-group {
+  width: 780px;
+  height: 553px;
+  display: flex;
+  align-items: center;
+}
+
+.banner__slider-container {
+  max-width: 391px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.banner__slider {
+  height: 553px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.banner__slider-wrapper {
+  overflow: hidden;
+}
+
+.banner__slider-inner--wrapper {
+  display: flex;
+  height: 100%;
+  transition: transform;
+}
+
+.banner__slide {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  width: 391px;
+  height: 395px;
+  font-size: 24px;
+  color: #ffffff;
+  border-radius: 25px;
+}
+
+.banner__slide:nth-child(1) {
+  background: url(../img/nft_photo1.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide:nth-child(2) {
+  background: url(../img/nft_photo2.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide:nth-child(3) {
+  background: url(../img/nft_photo3.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide:nth-child(4) {
+  background: url(../img/nft_photo4.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide:nth-child(5) {
+  background: url(../img/nft_photo5.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slider-bottom--panel {
+  margin: 0 auto;
+  width: 182px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 43px;
+  padding: 23.67px;
+  border-radius: 18.94px;
+  box-shadow: 0px 43.12px 34.49px -25.87px rgba(15, 15, 15, 0.12);
+  background: #ffffff;
+}
+
+.banner__button {
+  background-color: #ffffff;
+  border: none;
+}
+
+
+.banner__button:not(:disabled):hover,
+.banner__button:not(:disabled):focus {
+  cursor: pointer;
+  // background-color: #000000;
+  color: #ffffff;
+}
+
+
+.banner__button:disabled {
+  opacity: 0.4;
+  pointer-events: none;
+  user-select: none;
+}
+
+
+
+
+
+
+// .banner__slider-right--group {
+//   width: 780px;
+//   height: 553px;
+//   display: flex;
+//   align-items: center;
+// }
+
+.banner__slider-right--container {
+  max-width: 391px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.banner__slider-right {
+  display: flex;
+  flex-direction: column;
+}
+
+.banner__slider-right--wrapper {
+  overflow: hidden;
+}
+
+.banner__slider-right--inner-wrapper {
+  display: flex;
+  height: 100%;
+  transition: transform;
+}
+
+.banner__slide-right {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  width: 310px;
+  height: 322px;
+  font-size: 24px;
+  color: #ffffff;
+  border-radius: 22px 0px 0px 22px;
+}
+
+.banner__slider-right-arrow-dots {
+  width: 355px;
+  height: 192px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.banner__slider-right--img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.banner__slider-right--dots {
+  width: 143px;
+  height: 192.22px;
+  background: radial-gradient(circle, #000000 1px, transparent 1px);
+  background-size: 16px 16px; /* Расстояние между точками */
+  opacity: 0.5;
+
+}
+
+.banner__slide-right:nth-child(1) {
+  background: url(../img/nft_photo4.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide-right:nth-child(2) {
+  background: url(../img/nft_photo5.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide-right:nth-child(3) {
+  background: url(../img/nft_photo3.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide-right:nth-child(4) {
+  background: url(../img/nft_photo1.png) no-repeat center center;
+  background-size: cover;
+}
+
+.banner__slide-right:nth-child(5) {
+  background: url(../img/nft_photo2.png) no-repeat center center;
+  background-size: cover;
+}
+
 
