--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -1,18 +1,25 @@
 .header {
   display: flex;
   padding-top: 45px;
+  margin-bottom: 111px;
   &__list {
     display: flex;
     width: 445px;
     height: 27px;
     align-items: center;
     column-gap: 53px;
-    &-item {
+    &-item{
       &--link {
         color: #606060;
         font-size: 17.83px;
         font-weight: 500;
         text-transform: uppercase;
+      }
+      &--link:hover {
+        opacity: 0.5;
+      }
+      &--link:focus {
+        opacity: 0.3;
       }
     }
   }
@@ -37,7 +44,7 @@
         font-size: 16px;
         font-weight: 500;
       }
-     
+
       &--btn {
         margin-left: 23px;
         font-size: 16px;
@@ -60,5 +67,11 @@
     font-size: 16.17px;
     font-weight: 600;
     text-transform: uppercase;
+  }
+  &__conectWallet-btn:hover {
+    opacity: 0.5;
+  }
+  &__conectWallet-btn:focus {
+    opacity: 0.3;
   }
 }
