--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -23,7 +23,6 @@
 
 
 .banner {
-  // padding-top: 111px;
   width: 1350px;
   margin: 0 auto;
   transform: translateX(50px);
@@ -36,7 +35,6 @@
     justify-content: space-between;
     width: 568px;
     height: 515px;
-
 
     @keyframes slideIn {
       from {
@@ -62,9 +60,9 @@
       font-size: 75px;
       font-weight: 600;
       text-transform: capitalize;
-      transform: translateX(-100%); /* Смещение влево */
-      opacity: 0.5; /* Полупрозрачность */
-      animation: slideIn 0.7s ease-out forwards; /* Быстрая анимация */
+      transform: translateX(-100%);
+      opacity: 0.5;
+      animation: slideIn 0.7s ease-out forwards;
     }
     &-text {
       color: #676767;
@@ -73,9 +71,9 @@
       font-size: 18px;
       font-weight: 600;
       text-align: justify;
-      transform: translateX(-100%); /* Смещение влево */
-      opacity: 0.5; /* Полупрозрачность */
-      animation: slideIn 0.7s ease-out forwards; /* Быстрая анимация */
+      transform: translateX(-100%);
+      opacity: 0.5;
+      animation: slideIn 0.7s ease-out forwards;
       &--span {
         color: #000000;
       }
@@ -84,9 +82,9 @@
       display: flex;
       column-gap: 18px;
       margin-left: -40px;
-      transform: translateX(-100%); /* Смещение влево */
-      opacity: 0.5; /* Полупрозрачность */
-      animation: slideIn 0.7s ease-out forwards; /* Быстрая анимация */
+      transform: translateX(-100%);
+      opacity: 0.5;
+      animation: slideIn 0.7s ease-out forwards;
       &--item {
         &-link_explore{
           display: flex;
@@ -127,8 +125,6 @@
           display: flex;
           flex-direction: column;
           justify-content: space-around;
-          // align-items: center;
-          // justify-content: center;
           &-amount {
             color: #000000;
             font-size: 36.77px;
@@ -180,9 +176,9 @@
 
 .banner__slider-wrapper {
   overflow: hidden;
-  transform: translateY(-100%); /* Смещение вверх */
-  opacity: 0.5; /* Полупрозрачность */
-  animation: slideDown 0.6s ease-out forwards; /* Анимация вниз */
+  transform: translateY(-100%);
+  opacity: 0.5;
+  animation: slideDown 0.6s ease-out forwards;
 }
 
 @keyframes slideDown {
@@ -262,7 +258,6 @@
 .banner__button:not(:disabled):hover,
 .banner__button:not(:disabled):focus {
   cursor: pointer;
-  // background-color: #000000;
   color: #ffffff;
 }
 
@@ -273,17 +268,6 @@
   user-select: none;
 }
 
-
-
-
-
-
-// .banner__slider-right--group {
-//   width: 780px;
-//   height: 553px;
-//   display: flex;
-//   align-items: center;
-// }
 
 .banner__slider-right--container {
   max-width: 391px;
@@ -384,23 +368,216 @@
 
 
 
+
+.community {
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 600px;
+  overflow: hidden;
+  width: 814.56px;
+  height: 832.03px;
+  &__orbit-outer {
+    width: 755px;
+    height: 755px;
+    border-radius: 50%;
+    border: 1px solid #d3d3d3;
+    background: transparent;
+    position: absolute;
+    animation: rotateOrbit 20s linear infinite;
+    &--wrapper {
+      position: absolute;
+      border-radius: 50%;
+      overflow: hidden;
+      &.planet--1 {
+        width: 60px;
+        height: 60px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg) translate(377.5px) rotate(-0deg);
+      }
+
+      &.planet--2 {
+        width: 55px;
+        height: 55px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(72deg) translate(377.5px) rotate(-72deg);
+      }
+
+      &.planet--3 {
+        width: 50px;
+        height: 50px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(144deg) translate(377.5px) rotate(-144deg);
+      }
+
+      &.planet--4 {
+        width: 50px;
+        height: 50px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(216deg) translate(377.5px) rotate(-216deg);
+      }
+
+      &.planet--5 {
+        width: 60px;
+        height: 60px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(288deg) translate(377.5px) rotate(-288deg);
+      }
+    }
+
+    &--wrapper-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
+
+  &__orbit-inner {
+    width: 591px;
+    height: 591px;
+    border-radius: 50%;
+    border: 1px solid #d3d3d3;
+    background: transparent;
+    position: absolute;
+    animation: rotateOrbitCounter 20s linear infinite;
+
+    &--wrapper {
+      position: absolute;
+      border-radius: 50%;
+      overflow: hidden;
+
+      &.planet--6 {
+        width: 50px;
+        height: 50px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg) translate(295.5px) rotate(-0deg);
+      }
+
+      &.planet--7 {
+        width: 60px;
+        height: 60px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(90deg) translate(295.5px) rotate(-90deg);
+      }
+
+      &.planet--8 {
+        width: 40px;
+        height: 40px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(180deg) translate(295.5px) rotate(-180deg);
+      }
+
+      &.planet--9 {
+        width: 55px;
+        height: 55px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(270deg) translate(295.5px) rotate(-270deg);
+      }
+    }
+
+    &--wrapper-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+  }
+
+  &__orbit-inner--title {
+    width: 199px;
+    height: 78px;
+    font-size: 32px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: capitalize;
+    margin-top: -27px;
+  }
+
+  &__orbit-inner--text {
+    width: 424.58px;
+    height: 46px;
+    opacity: 0.7;
+    color: rgb(18, 20, 29);
+    font-size: 15.8px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: -37px;
+  }
+
+  &__orbit-inner--button {
+    width: 144.37px;
+    height: 39.12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-size: 12.5px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: capitalize;
+    border: none;
+    background-color: #000000;
+    border-radius: 8.53px;
+    cursor: pointer;
+  }
+}
+
+@keyframes rotateOrbit {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+@keyframes rotateOrbitCounter {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
+
 .question {
-  // padding-top: 155px;
   margin: 0 auto;
   width: 887px;
   height: 533px;
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  margin-bottom: 110px;
   &__title {
     width: 314px;
     height: 84px;
     font-size: 34.67px;
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
-    // opacity: 0.1; /* Начальное состояние перед анимацией */
-    transform: translateY(100%); /* Начальное положение */
+    transform: translateY(100%);
   }
   &__title.animate {
     animation: titleDown 0.4s ease-out forwards;
@@ -417,18 +594,8 @@
     }
   }
 
-  // @keyframes titleDown {
-  //   from {
-  //     transform: translateY(0);
-  //     opacity: 0.1;
-  //   }
-  //   to {
-  //     transform: translateY(20px); /* Опускаем вниз на 20px */
-  //     opacity: 1;
-  //   }
-  // }
 
-  /* Остальные стили */
+
   &__div {
     width: 887px;
     max-height: 108px;
@@ -489,3 +656,5 @@
     }
   }
 }
+
+
