--- a/source/scss/_blocks/footer.scss
+++ b/source/scss/_blocks/footer.scss
@@ -7,6 +7,7 @@
     width: 1440px;
     height: 345px;
     background-color: #141416;
+    margin-top: 160px;
     &__line {
         width: 1246px;
         height: 1px;
