Теперь можно создать карточку и поместить ее на главную страницу

--- a/product_platform/catalog/templates/footer.html
+++ b/product_platform/catalog/templates/footer.html
@@ -1,6 +1,7 @@
+{% load static %}
 <footer class="footer">
     <ul class="footer__list-first">
-        <li class="footer__list-first--item-left"><a href="" class="footer__list-first--item-link_first"><img src="../img/footer_logo_img.png" alt="logo" class="footer__list-first--item-link_img"><span class="footer__list-first--item-link_span">DiveSea</span></a></li>
+        <li class="footer__list-first--item-left"><a href="" class="footer__list-first--item-link_first"><img src="{% static 'img/diveSeaLogo.png' %}" alt="logo" class="footer__list-first--item-link_img"><span class="footer__list-first--item-link_span">DiveSea</span></a></li>
         <li class="footer__list-first--item"><a href="" class="footer__list-first--item-link">Privacy Policy</a></li>
         <li class="footer__list-first--item"><a href="" class="footer__list-first--item-link">Term & Conditions</a></li>
         <li class="footer__list-first--item"><a href="" class="footer__list-first--item-link">About Us</a></li>
